fix all api endpoint issues

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -12,7 +12,9 @@
     <textarea id="post-body" class="form-input">{{post.body}}</textarea>
 
     <button type="submit" class="btn">Update</button>
-
     <button type="button" id="delete-btn" class="btn">Delete</button>
   </form>
 </div>
+
+<script src="/js/edit-post.js"></script>
+<script src="/js/delete-post.js"></script>
