--- a/views/all-posts-by-user.handlebars
+++ b/views/all-posts-by-user.handlebars
@@ -1,5 +1,5 @@
 <div class="posts">
   {{#each posts as |post|}}
-    {{> post-detail post}}
+    {{> post-detail-by-user post}}
   {{/each}}
 </div>
