--- a/views/partials/post-detail.handlebars
+++ b/views/partials/post-detail.handlebars
@@ -1,19 +1,13 @@
-
-
-<div class="posts">
-  {{#each posts}}
-  <article class="card">
+  <div class="card">
     <div class="card-header flex-row justify-space-between">
       <h2>
         <a href="/post/{{id}}">{{title}}</a>
       </h2>
       <div>
-        Posted by {{User.username}} on {{format_date createdAt}}
+        Posted by {{user.username}} on {{format_date created_at}}
       </div>
     </div>
     <div class="card-body">
-      {{body}}
+      {{post_text}}
     </div>
-  </article>
-  {{/each}}
-</div>
+  </div>
