fix all api endpoint issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,13 +8,13 @@
   }
   
   * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
   }
   
   body {
     background-color: var(--primary);
-    margin: 0;
-    padding: 0;
     font-family: "IBM Plex Sans", sans-serif;
     color: var(--dark);
     line-height: 1.5;
@@ -102,6 +102,8 @@
   }
   
   .navbar {
+    margin: .5rem;
+    font-size: large;
     width: 100%;
     position: fixed;
     background-color: var(--dark);
@@ -120,7 +122,9 @@
     background-color: var(--dark);
     color: var(--primary);
   }
-  
+
+
+
   .hero p {
     max-width: 75%;
   }
@@ -129,6 +133,7 @@
     font-size: 3rem;
     background-color: var(--primary);
     color: var(--dark);
+    margin-top: .5rem;
     padding: 0 10px;
     display: inline-block;
     border-radius: var(--border-radius);
@@ -367,7 +372,12 @@
   }
   
   /* col-md */
-  @media screen and (min-width: 768px) {
+  @media screen and (max-width: 768px) {
+     .title{
+  
+      font-size: 25px;
+     
+    }
     .col-md-1 {
       flex: 0 0 calc(100% * 1 / 12 - 2%);
     }
